--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
     <form id="login-form">
         <div class="form-group">
             <label for="callsign">Callsign</label>
-            <input type="text" id="callsign" name="callsign" required placeholder="W1ABC">
+            <input type="text" id="callsign" name="callsign" required placeholder="W1ABC" style="text-transform: uppercase;">
         </div>
         <div class="form-group">
             <label for="password">Password</label>
